Fix nav font size on narrow screen

--- a/assets/style.css
+++ b/assets/style.css
@@ -250,6 +250,11 @@ footer small {
     nav {
         width: 70%;
     }
+    
+    nav h1 {
+        font-size: 36px;
+
+    }
 
     .page {
         width: 70%;
